fix the alignment of pagination

--- a/webclient/notes-storage-app/src/styles.scss
+++ b/webclient/notes-storage-app/src/styles.scss
@@ -101,6 +101,15 @@ header {
   transform: translateY(-50%);
 }
 
+.vertical-element {
+  float: left; 
+  width: 50%; 
+}
+
+.right-aligned {
+  float: right;
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
